--- a/training_lf/index.html
+++ b/training_lf/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="seminar-details">
-                <p><i class="fas fa-hotel icon-pink"></i> Full Day Seminar at a <strong>3–4 Star Hotel</strong>, Kolkata</p>
+                <p><i class="fas fa-hotel icon-pink"></i> Full Day Seminar with <strong>Snacks & Lunch</strong>,</p>
                 <p><i class="fas fa-calendar-alt icon-pink"></i> <strong>Date & Venue:</strong> To be announced soon. Stay tuned!</p>
             </div>
         </div>
@@ -272,4 +272,5 @@
         </div>
     </footer>
 </body>
+
 </html>
