Fix HTML encoding issues in index.html

--- a/training_lf/index.html
+++ b/training_lf/index.html
@@ -127,6 +127,9 @@
                         <li><i class="fas fa-clipboard-list"></i> Fill the quick online registration form.</li>
                         <li><i class="fas fa-credit-card"></i> Scan & Pay the non-refundable ₹500 token amount securely online.</li>
                         <img src="img/qr.png" alt="Nail Art Training" style="max-width:100%; height:auto; display:block; margin:0 auto;">
+                        <li><i class="fas fa-envelope-open-text"></i> Scanner se payment karne ke baad form fill karein: 
+<a href="https://forms.gle/ZWQyePFFhVastPWFA" target="_blank">Form Link</a>.
+</li>
                         <li><i class="fas fa-envelope-open-text"></i> Receive  confirmation & your seminar E-pass.</li>
                         <li><i class="fas fa-graduation-cap"></i> Attend the seminar, master skills, and start earning!</li>
                     </ul>
@@ -274,4 +277,5 @@
 </body>
 
 </html>
+
 
