--- a/training_lf/index.html
+++ b/training_lf/index.html
@@ -127,8 +127,27 @@
                         <li><i class="fas fa-clipboard-list"></i> Fill the quick online registration form.</li>
                         <li><i class="fas fa-credit-card"></i> Scan & Pay the non-refundable ₹500 token amount securely online.</li>
                         <img src="img/qr.png" alt="Nail Art Training" style="max-width:100%; height:auto; display:block; margin:0 auto;">
-                        <li><i class="fas fa-envelope-open-text"></i> Scanner se payment karne ke baad form fill karein: 
-<a href="https://forms.gle/ZWQyePFFhVastPWFA" target="_blank">Form Link</a>.
+                          <i class="fas fa-envelope-open-text" 
+     style="color:#e91e63; margin-right:8px; font-size:18px;"></i>
+  Scanner se payment karne ke baad form fill karein:
+  <br>
+  <a href="https://forms.zohopublic.in/rishavladyfairgm1/form/EventRegistration/formperma/g2XnfkuL0-F7Iotx6i_9QC--YmuVrvPyjc6mwFcNNho" target="_blank"
+     style="
+       display:inline-block;
+       margin-top:10px;
+       background-color:#e91e63;
+       color:#fff;
+       padding:10px 20px;
+       border-radius:6px;
+       text-decoration:none;
+       font-weight:600;
+       box-shadow:0 3px 8px rgba(233,30,99,0.3);
+       transition:all 0.3s ease;
+     "
+     onmouseover="this.style.backgroundColor='#c2185b'; this.style.boxShadow='0 3px 10px rgba(194,24,91,0.4)';"
+     onmouseout="this.style.backgroundColor='#e91e63'; this.style.boxShadow='0 3px 8px rgba(233,30,99,0.3)';">
+     📝 Fill Form
+  </a>
 </li>
                         <li><i class="fas fa-envelope-open-text"></i> Receive  confirmation & your seminar E-pass.</li>
                         <li><i class="fas fa-graduation-cap"></i> Attend the seminar, master skills, and start earning!</li>
@@ -277,5 +296,6 @@
 </body>
 
 </html>
+
 
 
